src/objects/AMC_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CaseAccountingPrefixCodeRecordType__c</fullName>
        <label>CaseAccountingPrefixCodeRecordType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseBaggageCodeRecordType__c</fullName>
        <label>CaseBaggageCodeRecordType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseCompanyInfoRecordType__c</fullName>
        <label>CaseCompanyInfoRecordType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseDesignatorCodeRecordType__c</fullName>
        <label>Case Designator Code RecordType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseLocationCodeRecordType__c</fullName>
        <label>CaseLocationCodeRecordType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseManageCodesRecordType__c</fullName>
        <label>CaseManageCodesRecordType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Approver_Orchestrator__c</fullName>
        <label>First Approver Orchestrator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orchestrator_Step_RecordType__c</fullName>
        <label>Orchestrator Step RecordType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonRecordTypeId__c</fullName>
        <label>amazonRecordTypeId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endpoint__c</fullName>
        <label>endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isPublicAmazonFile__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isPublicAmazonFile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AMC_Configuration</label>
</CustomObject>